--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
+  "dependencies": {
+    "express": "^4.17.3",
+    "vite": "^4.4.5"
+  },
 
   "devDependencies": {
     "react": "^18.2.0",
@@ -24,7 +28,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.27",
-    "tailwindcss": "^3.3.3",
-    "vite": "^4.4.5"
+    "tailwindcss": "^3.3.3"
+   
   }
 }
